# openrouter-ox

./: .gitignore  Cargo.toml
src/: agent.rs  lib.rs  message.rs  models.rs  provider_preference.rs  request.rs  response.rs  router.rs  tool.rs
src/agent/: config.rs  context.rs  error.rs  events.rs  executor.rs  mod.rs  simple_agent.rs  tool_call_aggregator.rs  traits.rs  typed_agent.rs
