[package]
name = "openrouter-ox"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["leaky-bucket"]
leaky-bucket = ["dep:leaky-bucket"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
  "http2",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
leaky-bucket = { version = "1.1", optional = true }
async-trait = "0.1"
tokio = { version = "1.43", features = ["rt", "macros"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
bon = "3.3.0"
derive_more = { version = "2.0", features = [
  "display",
  "deref",
  "deref_mut",
  "into",
  "into_iterator",
] }
